<resources>
    <string name="app_name">PetSitterApp</string>

    <!--PetForm Strings Start-->
    <!--Label Text-->
    <string name="String_petFormTitle">Pet Profile</string>

    <string name="String_petForm_PetNameTitle">Pet Name:</string>
    <string name="String_petForm_PetNameInput">Enter Pet Name HERE</string>

    <string name="String_petForm_PetSpeciesTitle">Pet Species:</string>

    <string name="String_petForm_PetSizeTitle">Pet Size:</string>

    <string name="String_petForm_PetTemperamentTitle">Temperament:</string>
    <string name="String_petForm_PetTemperamentInput">Enter Pet Temperament HERE</string>

    <string name="String_petForm_PetBreedTitle">Pet Breed:</string>
    <string name="String_petForm_PetBreedInput">Enter Pet Breed HERE</string>

    <string name="String_petForm_PetAgeTitle">Pet Age:</string>
    <string name="String_petForm_PetAgeInput">Enter Pet Age HERE</string>

    <string name="String_petForm_PetDietTitle">Pet Diet:</string>
    <string name="String_petForm_PetDietInput">Enter Pet Diet HERE</string>

    <string name="String_petForm_PetHealthIssuesTitle">Pet Health Issues:</string>
    <string name="String_petForm_PetHealthIssuesInput">Enter Pet Health Issues HERE</string>

    <string name="String_petForm_PetExtraInfoTitle">Pet Extra Info:</string>
    <string name="String_petForm_PetExtraInfoInput">Enter Extra Pet Info HERE</string>
    <!--Varchar Limits for PetForm-->
    <string name="PetName_CharLimit">80</string>
    <string name="PetSpecies_CharLimit">180</string>
    <string name="PetSize_CharLimit">45</string>
    <string name="PetTemperament_CharLimit">80</string>
    <string name="PetBreed_CharLimit">180</string>
    <string name="PetAge_CharLimit">40</string>
    <string name="PetDiet_CharLimit">480</string>
    <string name="PetHealthIssues_CharLimit">480</string>
    <string name="PetExtraInfo_CharLimit">480</string>
    <!--Error Tags-->
    <string name="String_ErrorTag_PetName">*Please Enter a Valid Pet Name, less then 80 characters</string>
    <string name="String_ErrorTag_PetSpecies">*Please Choose Your Pets Species</string>
    <string name="String_ErrorTag_PetSize">*Please Choose Your Pets Size</string>
    <string name="String_ErrorTag_PetTemperament">*Please Choose Your Pets Temperament</string>
    <string name="String_ErrorTag_PetBreed">*Please Enter Your Pets Breed</string>
    <string name="String_ErrorTag_PetAge">*Please Enter Your Pets Age</string>
    <string name="String_ErrorTag_PetDiet">*What/how sitter should feed your pet, where the food is, etc.</string>
    <string name="String_ErrorTag_PetHealthIssues">*Enter Your Pets Health Issues, such as medication that the sitter will need to give to pet and where to find it in the house.</string>
    <string name="String_ErrorTag_PetExtraInfo">*Enter Any Extra Info About Your Pet That The Sitter Should Need To Know.</string>
    <!--Button Text-->
    <string name="SubmitButton">Submit Pet Form</string>
    <!--PetForm Strings End-->



    <!--CreateAccount Strings Start-->
    <!--Label Text-->
    <string name="String_CreateAccountTitle">Account Creation Page</string>

    <string name="String_AccountCreation_FirstName_Title">First Name:</string>
    <string name="String_AccountCreation_FirstName_Hint">Enter Your First Name HERE</string>

    <string name="String_AccountCreation_LastName_Title">Last Name:</string>
    <string name="String_AccountCreation_LastName_Hint">Enter Your Last Name HERE</string>

    <string name="String_AccountCreation_Address_Title">Address:</string>
    <string name="String_AccountCreation_Address_Hint">Enter Your Address HERE</string>

    <string name="String_AccountCreation_PhoneNumber_Title">Phone #:</string>

    <string name="String_AccountCreation_Email_Title">Email:</string>
    <string name="String_AccountCreation_Email_Hint">Enter Your Email HERE</string>

    <string name="String_AccountCreation_TypeOfAccount_Title">Account Type:</string>

    <string name="String_AccountCreation_Password_Title">Password:</string>
    <string name="String_AccountCreation_Password_Hint">Enter Your Password HERE</string>

    <string name="String_AccountCreation_ConfirmPassword_Title">Confirm Password:</string>
    <string name="String_AccountCreation_ConfirmPassword_Hint">Enter Password Again</string>

    <!--Radio Button Options-->
    <string name="RadioButton_Owner">Owner</string>
    <string name="RadioButton_Sitter">Sitter</string>
    <string name="RadioButton_Both">Both</string>



    <!--Varchar Limits for AccountCreation-->
    <string name="FirstName_CharLimit"    >90</string>
    <string name="LastName_CharLimit"     >90</string>
    <string name="Address_CharLimit"      >190</string>
    <string name="PhoneNumber_CharLimit"  >15</string>
    <string name="Email_CharLimit"        >280</string>
    <string name="TypeOfAccount_CharLimit">20</string>
    <string name="Password_CharLimit"     >180</string>
    <!--Error Tags-->
    <string name="_">*__</string>
    <string name="ErrorTag_FirstName"    >*Input Your First Name</string>
    <string name="ErrorTag_LastName"     >*Input Your Last Name</string>
    <string name="ErrorTag_Address"      >*Input Your Address</string>
    <string name="ErrorTag_PhoneNumber"  >*Input Your Phone Number</string>
    <string name="ErrorTag_Email"        >*Input Your Email</string>
    <string name="ErrorTag_TypeOfAccount">*Choose What Type Of Account You Would Like (Can be added onto later)</string>
    <string name="ErrorTag_Password"     >*Input Password</string>
    <!--Button Text-->
    <string name="CreateAccountButton">Create Account</string>
    <!--CreatAccount Strings End-->


    <!-- Sitter Page Strings -->
    <string name ="findNewJobBtn">New Jobs</string>
    <string name ="allAcceptedJobsTitle">Accepted Jobs</string>
    <string name ="jobPrefBtn">Account Job Preferences</string>

    <!-- All Pets Strings -->
    <string name="allPetsTitle">Your Pets</string>
    <string name="newPetBtn">Add Pet</string>
    <string name="newJobBtn">Create New Sitting Job</string>
    <string name="allJobsOwnerBtn">Your Open Sitting Jobs</string>


    <!-- All View_Pets Strings -->
    <string name="PetView_GoBack_Button">Go Back</string>

    <!-- Login Strings   -->
    <string name="loginError">Incorrect Username or Password</string>
    <string name="usernameLabel">Username/Email</string>
    <string name="passwordLabel">Password</string>
    <string name="createAccountQuestion">Don\'t have an account yet?</string>
    <string name="createAccountBtn">Create Account</string>
    <string name="String_ViewPetForm_PetNameTitle">\"temp\"</string>
    <string name="String_ViewPetFormTitle">\"temp\"</string>


    <string name="Go_Back">GO BACK</string>

    <string name="goBackViewJob">Go Back</string>

    <string name="cancelJob">Cancel</string>

    <string name="Edit">Edit Pet</string>

    <string name="Delete">Delete Pet</string>


</resources>