<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@color/cream">

    -<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".PetFormActivity">
        <Button
        android:id="@+id/go_back_pet_profile"
        style="@style/Button"
        android:text="@string/Go_Back"
        android:layout_margin="10dp"
        android:onClick="goBackPetForm"
        />


    <Button
        android:id="@+id/deletePet"
        style="@style/DeletePet"
        android:layout_alignParentRight="true"
        android:text="@string/Delete"
        android:layout_margin="10dp"
        android:onClick="deletePet"
        android:visibility="invisible"
        />

        <TextView
            android:id="@+id/PetFormTitle"
            style="@style/Header"

            android:text="@string/String_petFormTitle"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="20dp"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/RelativeLayout_PetForm_PetName"
            android:layout_below="@+id/PetFormTitle"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/PetNameTitle"
                style="@style/PetForm_TextViews"
                android:text="@string/String_petForm_PetNameTitle"

                />

            <EditText
                android:id="@+id/PetNameInput"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/PetNameTitle"
                android:background="@color/petFormInput_color"
                android:layout_width="300dp"
                android:layout_height="30dp"

                android:paddingHorizontal="10dp"
                android:hint="@string/String_petForm_PetNameInput"
                android:text=""
                android:maxLength="@string/PetName_CharLimit"
                android:inputType="text"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout_PetForm_ErrorTag_PetName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayout_PetForm_PetName"
            >

            <!--Error Tag FOR Pet Name-->
            <TextView
                android:id="@+id/ErrorTag_PetName"
                android:visibility = "invisible"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/String_ErrorTag_PetName"
                android:textColor="@color/Color_ErrorTag"
                />
        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/RelativeLayout_PetForm_Species"
            android:layout_below="@+id/RelativeLayout_PetForm_ErrorTag_PetName"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/PetSpeciesTitle"
                style="@style/PetForm_TextViews"
                android:text="@string/String_petForm_PetSpeciesTitle"
                />

            <Spinner
                android:id="@+id/PetForm_PetSpeciesSpinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"

                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"

                android:layout_toRightOf="@+id/PetSpeciesTitle"
                android:layout_toEndOf="@+id/PetSpeciesTitle"

                android:background="@color/petFormInput_color"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout_PetForm_ErrorTag_PetSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayout_PetForm_Species"
            >

            <!--Error Tag FOR Pet Name-->
            <TextView
                android:id="@+id/ErrorTag_PetSpecies"
                android:visibility = "invisible"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/String_ErrorTag_PetSpecies"
                android:textColor="@color/Color_ErrorTag"
                />
        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_Size"
        android:layout_below="@+id/RelativeLayout_PetForm_ErrorTag_PetSpecies"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PetSizeTitle"
            style="@style/PetForm_TextViews"
            android:text="@string/String_petForm_PetSizeTitle"/>

        <Spinner
            android:id="@+id/PetForm_PetSizeSpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"

            android:layout_toRightOf="@+id/PetSizeTitle"
            android:layout_toEndOf="@+id/PetSizeTitle"

            android:background="@color/petFormInput_color"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_ErrorTag_PetSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_PetForm_Size"
        >

        <!--Error Tag FOR Pet Name-->
        <TextView
            android:id="@+id/ErrorTag_PetSize"
            android:visibility = "invisible"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/String_ErrorTag_PetSize"
            android:textColor="@color/Color_ErrorTag"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_PetTemperament"
        android:layout_below="@+id/RelativeLayout_PetForm_ErrorTag_PetSize"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PetTemperamentTitle"
            style="@style/PetForm_TextViews"
            android:textSize="13sp"
            android:text="@string/String_petForm_PetTemperamentTitle"/>

        <Spinner
            android:id="@+id/PetForm_PetTemperamentSpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"

            android:layout_toRightOf="@+id/PetTemperamentTitle"
            android:layout_toEndOf="@+id/PetTemperamentTitle"

            android:background="@color/petFormInput_color"
            />
    </RelativeLayout>








    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_ErrorTag_PetTemperament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_PetForm_PetTemperament"
        >

        <!--Error Tag FOR Pet Name-->
        <TextView
            android:id="@+id/ErrorTag_PetTemperament"
            android:visibility = "invisible"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/String_ErrorTag_PetTemperament"
            android:textColor="@color/Color_ErrorTag"
            />
    </RelativeLayout>








    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_PetBreed"
        android:layout_below="@+id/RelativeLayout_PetForm_ErrorTag_PetTemperament"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PetBreedTitle"
            style="@style/PetForm_TextViews"
            android:text="@string/String_petForm_PetBreedTitle"/>

        <EditText
            android:id="@+id/PetBreedInput"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/PetBreedTitle"
            android:background="@color/petFormInput_color"
            android:layout_width="300dp"
            android:layout_height="30dp"

            android:paddingHorizontal="10dp"
            android:hint="@string/String_petForm_PetBreedInput"
            android:maxLength="@string/PetBreed_CharLimit"
            android:inputType="text"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_ErrorTag_PetBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_PetForm_PetBreed"
        >

        <!--Error Tag FOR Pet Name-->
        <TextView
            android:id="@+id/ErrorTag_PetBreed"
            android:visibility = "invisible"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/String_ErrorTag_PetBreed"
            android:textColor="@color/Color_ErrorTag"
            />
    </RelativeLayout>






    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_PetAge"
        android:layout_below="@+id/RelativeLayout_PetForm_ErrorTag_PetBreed"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PetAgeTitle"
            style="@style/PetForm_TextViews"
            android:text="@string/String_petForm_PetAgeTitle"/>

        <EditText
            android:id="@+id/PetAgeInput"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/PetAgeTitle"
            android:background="@color/petFormInput_color"
            android:layout_width="300dp"
            android:layout_height="30dp"

            android:paddingHorizontal="10dp"
            android:hint="@string/String_petForm_PetAgeInput"
            android:maxLength="@string/PetAge_CharLimit"
            android:inputType="number"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_ErrorTag_PetAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_PetForm_PetAge"
        >

        <!--Error Tag FOR Pet Name-->
        <TextView
            android:id="@+id/ErrorTag_PetAge"
            android:visibility = "invisible"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/String_ErrorTag_PetAge"
            android:textColor="@color/Color_ErrorTag"
            />
    </RelativeLayout>





    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_PetDiet"
        android:layout_below="@+id/RelativeLayout_PetForm_ErrorTag_PetAge"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PetDietTitle"
            style="@style/PetForm_TextViews"
            android:text="@string/String_petForm_PetDietTitle"/>

        <EditText
            android:id="@+id/PetDietInput"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/PetDietTitle"
            android:background="@color/petFormInput_color"
            android:layout_width="300dp"
            android:layout_height="30dp"

            android:paddingHorizontal="10dp"
            android:hint="@string/String_petForm_PetDietInput"
            android:maxLength="@string/PetDiet_CharLimit"
            android:inputType="text"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_ErrorTag_PetDiet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_PetForm_PetDiet"
        >

        <!--Error Tag FOR Pet Name-->
        <TextView
            android:id="@+id/ErrorTag_PetDiet"
            android:visibility = "invisible"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/String_ErrorTag_PetDiet"
            android:textColor="@color/Color_ErrorTag"
            />
    </RelativeLayout>








    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_PetHealthIssues"
        android:layout_below="@+id/RelativeLayout_PetForm_ErrorTag_PetDiet"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PetHealthIssuesTitle"
            style="@style/PetForm_TextViews"
            android:layout_height="40dp"
            android:text="@string/String_petForm_PetHealthIssuesTitle"/>

        <EditText
            android:id="@+id/PetHealthIssuesInput"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/PetHealthIssuesTitle"
            android:background="@color/petFormInput_color"
            android:layout_width="300dp"
            android:layout_height="30dp"

            android:paddingHorizontal="10dp"
            android:hint="@string/String_petForm_PetHealthIssuesInput"
            android:maxLength="@string/PetHealthIssues_CharLimit"
            android:inputType="text"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_ErrorTag_PetHealthIssues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_PetForm_PetHealthIssues"
        >

        <!--Error Tag FOR Pet Name-->
        <TextView
            android:id="@+id/ErrorTag_PetHealthIssues"
            android:visibility = "invisible"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/String_ErrorTag_PetHealthIssues"
            android:textColor="@color/Color_ErrorTag"
            />
    </RelativeLayout>






    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_PetExtraInfo"
        android:layout_below="@+id/RelativeLayout_PetForm_ErrorTag_PetHealthIssues"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PetExtraInfoTitle"
            style="@style/PetForm_TextViews"
            android:layout_height="40dp"
            android:text="@string/String_petForm_PetExtraInfoTitle"/>

        <EditText
            android:id="@+id/PetExtraInfoInput"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/PetExtraInfoTitle"
            android:background="@color/petFormInput_color"
            android:layout_width="300dp"
            android:layout_height="30dp"

            android:paddingHorizontal="10dp"
            android:hint="@string/String_petForm_PetExtraInfoInput"
            android:maxLength="@string/PetExtraInfo_CharLimit"
            android:inputType="text"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/RelativeLayout_PetForm_ErrorTag_PetExtraInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout_PetForm_PetExtraInfo"
        >

        <!--Error Tag FOR Pet Name-->
        <TextView
            android:id="@+id/ErrorTag_PetExtraInfo"
            android:visibility = "invisible"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:text="@string/String_ErrorTag_PetExtraInfo"
            android:textColor="@color/Color_ErrorTag"
            />
    </RelativeLayout>







    <RelativeLayout
            android:id="@+id/RelativeLayout_PetForm_SubmitButton"
            android:layout_below="@+id/RelativeLayout_PetForm_ErrorTag_PetExtraInfo"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/PetForm_SubmitButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:text="@string/SubmitButton"

                android:onClick = "savePetInfo"
                />
        </RelativeLayout>

    -</RelativeLayout>
</ScrollView>